# openCL-examples

./: README.md  conflagartae
Flow/: Flow  Flow.cl  Flow.cpp  FlowLog.txt  FlowOut.txt
FluidSimulation2D/: CMakeCache.txt  CMakeLists.txt  FluidSimulation2D_Kernels.cl  Makefile  cmake_install.cmake
Fluidity/: Commit1  Fluidity README  Fluidity.cl  Fluidity.cpp  Fluidity.hpp  Fluiditylog.txt  Fluiditynogl.cpp  fluidity  fluiditynogl
MatMul/: Matmul.cl  Matmul.cpp  commit2  mohit
MatMul(abandon)/: Matmul.cl  Matmul.cpp  Matmullog.txt
NBody2/: CMakeCache.txt  CMakeLists.txt  Commit1.txt  Makefile  NBody2  NBody2.cpp  NBody2.hpp  NBody2.sh  NBody2Ans.txt  NBody2log.txt  analysis.txt  cmake_install.cmake  commit2.txt  gmon.out
NBody3/: NBody2Ans.txt  NBody2log.txt  NBody3  NBody3.cl  NBody3.cpp  NBody3.hpp  NBody3Ans.txt  NBody3log.txt
Tests/: Tests  Tests.cpp  Vecadd1.cpp  analysis.txt  gmon.out
Vecadd1/: Vecadd1  Vecadd1.cpp
mohit/: MOhit.cpp  Matmul  Mohit.cl  MohitLog.txt  mohit
ogltest/: ogltest  ogltest.cpp
